--- a/src/app/modules/evaluation/evaluationclasssubjectmap/EvaluationClassSubjectMap.component.scss
+++ b/src/app/modules/evaluation/evaluationclasssubjectmap/EvaluationClassSubjectMap.component.scss
@@ -8,7 +8,7 @@ mat-form-field{
 .mat-column-ExamId,
 .mat-column-Evaluation,
 .mat-column-EvaluationName,
-.mat-column-ClassId,
+.mat-column-ClassGroupId,
 .mat-column-ClassSubjectId{
     
     flex:1 1 150px;
