--- a/src/app/modules/evaluation/evaluationresult/evaluationresult.component.scss
+++ b/src/app/modules/evaluation/evaluationresult/evaluationresult.component.scss
@@ -2,3 +2,11 @@ mat-form-field{
     margin-right: 15px;
     width:98%
 }
+mat-cell:first-of-type{
+    padding-left: 0px;
+}
+.icon {
+    font-size: 12px;
+    height: 15px ;
+    width: 12px ;
+  }
