--- a/src/app/modules/evaluation/classevaluationoption/classevaluationoption.component.html
+++ b/src/app/modules/evaluation/classevaluationoption/classevaluationoption.component.html
@@ -1,5 +1,5 @@
 <div style="padding:15px 15px 10px 15px;">
-    <div><strong>Evaluation Options</strong></div>
+    <div><strong>Answer Options</strong></div>
 </div>
 <mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
 <div style="padding: 15px;" fxLayout="row wrap">
